fixing alignment issues

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -92,7 +92,7 @@ p {
 .breadcrumb-item + .breadcrumb-item::before {
   display: inline-block;
   padding: 0 0.5rem;
-  color: ##6c757d;
+  color: #6c757d;
   content: "/";
   justify-content: center;
 }
@@ -822,6 +822,9 @@ h6 {
 .clearfix:after {
   clear: both;
 }
+.clearfix {
+  display: inline-block;
+}
 
 .wrapper1 {
   width: 90%;
@@ -831,7 +834,7 @@ h6 {
 .price-container {
   width: 100%;
   /* height: 700px; */
-  /* margin-top: 140px; */
+  margin-top: 4rem;
   background: #fff;
   text-align: center;
   padding-bottom: 80px;
@@ -869,15 +872,14 @@ width: 80%;
 
 
 .box {
-  width: 260px;
+  max-width: 260px;
   /* height: 420px; */
   outline: 1px solid #ddd;
   float: left;
   text-align: center;
-  margin-left: 60px;
+  margin: 0 20px 80px 20px;
   position: relative;
   background-color: #ffffff;
-  margin-bottom: 80px;
 }
 
 .shadow {
@@ -888,9 +890,9 @@ width: 80%;
   box-shadow: 1px 2px 16px 2px #d8d8d8;
 }
 
-.box1 {
+/* .box1 {
   margin-left: 30px;
-}
+} */
 
 /* .box:hover {
   box-shadow: 4px 7px;
